--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,7 @@
   <version>1.0-SNAPSHOT</version>
 
   <name>my-app</name>
+  <!-- FIXME change it to the project's website -->
   <url>http://www.example.com</url>
 
   <properties>
@@ -33,6 +34,7 @@
       <artifactId>junit-jupiter-api</artifactId>
       <scope>test</scope>
     </dependency>
+    <!-- Optionally: parameterized tests support -->
     <dependency>
       <groupId>org.junit.jupiter</groupId>
       <artifactId>junit-jupiter-params</artifactId>
@@ -41,12 +43,14 @@
   </dependencies>
 
   <build>
-    <pluginManagement>
+    <pluginManagement><!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
       <plugins>
+        <!-- clean lifecycle, see https://maven.apache.org/ref/current/maven-core/lifecycles.html#clean_Lifecycle -->
         <plugin>
           <artifactId>maven-clean-plugin</artifactId>
           <version>3.4.0</version>
         </plugin>
+        <!-- default lifecycle, jar packaging: see https://maven.apache.org/ref/current/maven-core/default-bindings.html#Plugin_bindings_for_jar_packaging -->
         <plugin>
           <artifactId>maven-resources-plugin</artifactId>
           <version>3.3.1</version>
@@ -71,6 +75,7 @@
           <artifactId>maven-deploy-plugin</artifactId>
           <version>3.1.2</version>
         </plugin>
+        <!-- site lifecycle, see https://maven.apache.org/ref/current/maven-core/lifecycles.html#site_Lifecycle -->
         <plugin>
           <artifactId>maven-site-plugin</artifactId>
           <version>3.12.1</version>
@@ -82,16 +87,4 @@
       </plugins>
     </pluginManagement>
   </build>
-
-  <!-- Added distributionManagement section -->
-  <distributionManagement>
-    <repository>
-      <id>releases-repo</id>
-      <url>http://your-repo-url/repository/maven-releases</url>
-    </repository>
-    <snapshotRepository>
-      <id>snapshots-repo</id>
-      <url>http://your-repo-url/repository/maven-snapshots</url>
-    </snapshotRepository>
-  </distributionManagement>
 </project>
